# NASA-Outgassing-Database

./: README.md  main.py  pyproject.toml
output/: nasa_outgassing.csv  nasa_outgassing.pq  nasa_outgassing.xlsx
